# skat-rl

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/skat_rl/agents/: heuristic_agent.py  random_agent.py
src/skat_rl/cpp_engine/: __init__.py  bindings.cpp  fast_skat.cpp  fast_skat.h
src/skat_rl/engine/: cards.py  game.py  rules.py  state.py
src/skat_rl/envs/: skat_cpp_sb3_env.py  skat_sb3_env.py
src/skat_rl/scripts/: benchmark_agents.py
src/skat_rl/training/: evaluate_maskable_ppo.py  train_maskable_ppo.py
tests/cpp_engine/: test_cpp_engine_basic.py  test_cpp_engine_equivalence.py
tests/engine/: test_cards.py  test_game.py  test_rules.py  test_state.py
tests/envs/: test_skat_cpp_sb3_env.py  test_skat_sb3_env.py
